Please provide the file changes to generate a commit message.

--- a/Google Workspace Studio×Gmail×Geminiで追客漏れゼロを実現する営業パイプライン自動化フロー/テスト用メール文章集.md
+++ b/Google Workspace Studio×Gmail×Geminiで追客漏れゼロを実現する営業パイプライン自動化フロー/テスト用メール文章集.md
@@ -182,7 +182,7 @@ DEF株式会社
 
 ---
 
-## Lesson 4: 営業資料自動整理エージェント
+## Lesson 4: 添付ファイル自動保存エージェント
 
 ### テストメール⑥：提案書添付
 
@@ -208,10 +208,9 @@ DEF株式会社
 
 **添付ファイル**: 適当なPDFファイルを添付（テスト用に空のPDFでも可）
 
-**期待される出力**:
-- 資料タイプ: 提案書
-- 顧客名: 株式会社JKL
-- 保存フォルダ: 営業資料/株式会社JKL/提案書
+**期待される動作**:
+- 添付ファイルが「営業資料」フォルダに自動保存される
+- Chat DMで保存完了通知が届く
 
 ---
 
@@ -238,10 +237,10 @@ MNO株式会社
 
 **添付ファイル**: 適当なPDFファイルを添付
 
-**期待される出力**:
-- 資料タイプ: 見積書
-- 顧客名: MNO株式会社
-- 保存フォルダ: 営業資料/MNO株式会社/見積書
+**期待される動作**:
+- 添付ファイルが「営業資料」フォルダに自動保存される
+- Chat DMで保存完了通知が届く
+- 週次レポートで「見積書」として分析される
 
 ---
 
@@ -384,10 +383,11 @@ YZ株式会社
 - [ ] テストメール⑤を送信 → ラベルが付与されないか（NO判定）
 - [ ] Chat DMに次アクション通知が届くか
 
-### Lesson 4: 営業資料自動整理
-- [ ] テストメール⑥を送信 → Driveに提案書フォルダへ保存されるか
-- [ ] テストメール⑦を送信 → Driveに見積書フォルダへ保存されるか
-- [ ] ファイル名が正しい形式（日付_顧客名_資料タイプ）になっているか
+### Lesson 4: 添付ファイル自動保存
+- [ ] テストメール⑥を送信 → 「営業資料」フォルダに保存されるか
+- [ ] テストメール⑦を送信 → 「営業資料」フォルダに保存されるか
+- [ ] Chat DMで保存完了通知が届くか
+- [ ] 週次レポートエージェントを実行 → ファイル一覧が分析されるか
 
 ### Lesson 5: 確度高案件監視
 - [ ] テストメール⑧を送信 → 確度HIGHで優先アラートが届くか
